--- a/views/pages/website/add.pug
+++ b/views/pages/website/add.pug
@@ -43,38 +43,38 @@ block content
               label(class="col-sm-2 col-form-label", for="website_category") Website Category
               .col-sm-10
                   .custom-control.custom-radio.col-sm-1.float-left
-                    input#news(type="radio", name="website_category", class="custom-control-input", value="News", checked=true)
+                    input#news(type="radio", name="website_category", class="custom-control-input web-cat", value="News", checked=true)
                     label(for='news', class="custom-control-label") News
                   .custom-control.custom-radio.col-sm-1.float-left
-                    input#blog(type="radio", name="website_category", class="custom-control-input", value="Blog")
+                    input#blog(type="radio", name="website_category", class="custom-control-input web-cat", value="Blog")
                     label(for='blog', class="custom-control-label") Blog
 
             .form-group.row
               label(class="col-sm-2 col-form-label", for="website_category") Website Type
               .col-sm-10
                   .custom-control.custom-radio.col-sm-2.float-left
-                    input#local_news(type="radio", name="website_type", class="custom-control-input", value="LOCAL_NEWS", checked=true)
+                    input#local_news(type="radio", name="website_type", class="custom-control-input web-type", value="LOCAL_NEWS", checked=true)
                     label(for='local_news', class="custom-control-label") Local News
                   .custom-control.custom-radio.col-sm-2.float-left
-                    input#local_blog(type="radio", name="website_type", class="custom-control-input", value="LOCAL_BLOG")
+                    input#local_blog(type="radio", name="website_type", class="custom-control-input web-type", value="LOCAL_BLOG")
                     label(for='local_blog', class="custom-control-label") Local Blog
+                  //- .custom-control.custom-radio.col-sm-2.float-left
+                  //-   input#provincial_news(type="radio", name="website_type", class="custom-control-input", value="PROVINCIAL_NEWS")
+                  //-   label(for='provincial_news', class="custom-control-label") Provincial News
+                  //- .custom-control.custom-radio.col-sm-2.float-left
+                  //-   input#news_compilation(type="radio", name="website_type", class="custom-control-input", value="NEWS_COMPILATION")
+                  //-   label(for='news_compilation', class="custom-control-label") News Compilation
+                  //- .custom-control.custom-radio.col-sm-2.float-left
+                  //-   input#tabloid(type="radio", name="website_type", class="custom-control-input", value="TABLOID")
+                  //-   label(for='tabloid', class="custom-control-label") Tabloid
+                  //- .custom-control.custom-radio.col-sm-2.float-left
+                  //-   input#magazine(type="radio", name="website_type", class="custom-control-input", value="MAGAZINE")
+                  //-   label(for='magazine', class="custom-control-label") Magazine
                   .custom-control.custom-radio.col-sm-2.float-left
-                    input#provincial_news(type="radio", name="website_type", class="custom-control-input", value="PROVINCIAL_NEWS")
-                    label(for='provincial_news', class="custom-control-label") Provincial News
-                  .custom-control.custom-radio.col-sm-2.float-left
-                    input#news_compilation(type="radio", name="website_type", class="custom-control-input", value="NEWS_COMPILATION")
-                    label(for='news_compilation', class="custom-control-label") News Compilation
-                  .custom-control.custom-radio.col-sm-2.float-left
-                    input#tabloid(type="radio", name="website_type", class="custom-control-input", value="TABLOID")
-                    label(for='tabloid', class="custom-control-label") Tabloid
-                  .custom-control.custom-radio.col-sm-2.float-left
-                    input#magazine(type="radio", name="website_type", class="custom-control-input", value="MAGAZINE")
-                    label(for='magazine', class="custom-control-label") Magazine
-                  .custom-control.custom-radio.col-sm-2.float-left
-                    input#international_news(type="radio", name="website_type", class="custom-control-input", value="INTERNATIONAL_NEWS")
+                    input#international_news(type="radio", name="website_type", class="custom-control-input web-type", value="INTERNATIONAL_NEWS")
                     label(for='international_news', class="custom-control-label") International News
                   .custom-control.custom-radio.col-sm-2.float-left
-                    input#international_blog(type="radio", name="website_type", class="custom-control-input", value="INTERNATIONAL_BLOG")
+                    input#international_blog(type="radio", name="website_type", class="custom-control-input web-type", value="INTERNATIONAL_BLOG")
                     label(for='international_blog', class="custom-control-label") International Blog
             
             .form-group.row
