--- a/views/pages/setting/edit.pug
+++ b/views/pages/setting/edit.pug
@@ -178,6 +178,7 @@ block content
                                     | // You can modify this function
                                     | Article.prototype.ARTICLE_TITLE = async function(){
                                     |     const $ = this.ENTITY()
+                                    |     const S = this.STRING()
                                     |     const p = new Promise(async (resolve, reject) => {
                                     |         try{
                                     |             // insert your code here
@@ -209,7 +210,7 @@ block content
                                     |             if(findReplaces.length > 0){
                                     |               for(let i = 0; i < findReplaces.length; i++){
                                     |                   let fr = findReplaces[i]
-                                    |                   title = S(title).replaceAll(fr.find, fr.replace).s
+                                    |                   title = S(title).replaceAll(fr.find, fr.replace).s.trim()
                                     |               }
                                     |             }
                                     |
@@ -367,7 +368,7 @@ block content
                                     |             if(findReplaces.length > 0){
                                     |               for(let i = 0; i < findReplaces.length; i++){
                                     |                   let fr = findReplaces[i]
-                                    |                   textContent = S(textContent).replaceAll(fr.find, fr.replace).s
+                                    |                   textContent = S(textContent).replaceAll(fr.find, fr.replace).s.trim()
                                     |               }
                                     |             }
                                     |
